<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <TextView
            style="@style/card_label"
            android:layout_marginTop="18dp"
            android:text="@string/card_we_accept" />

        <LinearLayout
            android:id="@+id/cardTypeIconList"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>

        <TextView
            style="@style/card_label"
            android:layout_marginTop="8dp"
            android:text="@string/card_number" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <jp.webpay.android.ui.field.NumberField
                style="@style/card_edit_text"
                android:id="@+id/cardNumberField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp" />

            <ImageView
                android:id="@+id/cardNumberTypeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/cardNumberField"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:contentDescription="@string/card_number_type_icon_description" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    style="@style/card_label"
                    android:layout_marginTop="18dp"
                    android:text="@string/card_expiry" />

                <jp.webpay.android.ui.field.ExpiryField
                    style="@style/card_edit_text"
                    android:id="@+id/cardExpiryField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginLeft="20dp">
                <TextView
                    style="@style/card_label"
                    android:layout_marginTop="18dp"
                    android:text="@string/card_cvc" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <jp.webpay.android.ui.field.CvcField
                        style="@style/card_edit_text"
                        android:id="@+id/cardCvcField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@id/cardCvcField"
                        android:id="@+id/cardCvcHelpButton"
                        android:clickable="false"
                        android:src="@drawable/cvc_help_button"
                        android:background="@android:color/transparent"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="4dp"
                        android:contentDescription="@string/card_cvc_help_description" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/card_label"
            android:layout_marginTop="18dp"
            android:text="@string/card_name" />

        <jp.webpay.android.ui.field.NameField
            style="@style/card_edit_text"
            android:id="@+id/cardNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_marginTop="24dp">

            <Button
                android:id="@+id/button_cancel"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="#80000000"
                android:background="@drawable/abc_item_background_holo_light"
                android:text="@string/card_cancel" />

            <Button
                android:id="@+id/button_sumbmit"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:text="@string/card_send" />
         </LinearLayout>
    </LinearLayout>
</ScrollView>


